examples/neg/lambda_case_exhaustivity.effekt
def foo[A, B](a: A){ body: A => B }: B = body(a)

def main() = {
  foo(true){
    case false => () // ERROR Non-exhaustive
  }
}